--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">QuestionRoom</string>
-    <string name="title_activity_login">Question Room</string>
+    <string name="app_name">Just Ask</string>
+    <string name="title_activity_login">Just Ask</string>
 
     <!-- Strings related to login -->
     <string name="prompt_room_name">Room Name</string>
